--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.17.1",
 		"react": "16.0.0",
-		"react-native": "0.50.1"
+		"react-native": "0.50.1",
+		"react-native-navigation": "^1.1.268",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
