--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 	"dependencies": {
 		"axios": "^0.17.1",
 		"lodash": "^4.17.4",
+		"moment": "^2.19.2",
 		"react": "16.0.0",
 		"react-native": "0.50.1",
+		"react-native-image-picker": "^0.26.7",
 		"react-native-keyboard-manager": "^4.0.13-4",
+		"react-native-modal-datetime-picker": "^4.13.0",
 		"react-native-navigation": "^1.1.268",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
