--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"moment": "^2.19.2",
 		"react": "16.0.0",
 		"react-native": "0.50.1",
+		"react-native-calendars": "^1.11.0",
 		"react-native-image-picker": "^0.26.7",
 		"react-native-keyboard-manager": "^4.0.13-4",
 		"react-native-modal-datetime-picker": "^4.13.0",
