--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-native-image-picker": "^0.26.7",
     "react-native-keyboard-manager": "^4.0.13-4",
     "react-native-modal-datetime-picker": "^4.13.0",
+    "react-native-multiple-select-list": "^1.0.4",
     "react-native-navigation": "^1.1.268",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-persist": "^5.4.0",
