--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "axios": "^0.17.1",
     "lodash": "^4.17.4",
-    "moment": "^2.19.2",
+    "moment": "^2.22.1",
     "react": "16.0.0",
+    "react-moment": "^0.7.0",
     "react-native": "0.50.1",
     "react-native-calendars": "^1.11.0",
     "react-native-doc-viewer": "^2.6.8",
