--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/roof_launcher"
       android:allowBackup="false"
+      android:roundIcon="@mipmap/roof_launcher"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
@@ -24,3 +27,4 @@
     </application>
 
 </manifest>
+
