--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,4 +17,23 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+# android.useDeprecatedNdk=true
+# #MYAPP_RELEASE_STORE_FILE= yuvasoft.keytool
+# #MYAPP_RELEASE_KEY_ALIAS= yuvasoft
+# #MYAPP_RELEASE_STORE_PASSWORD= yuvasoft@123
+# #MYAPP_RELEASE_KEY_PASSWORD= yuvasoft@123
+
+# MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+# MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+# MYAPP_RELEASE_STORE_PASSWORD=12345678
+# MYAPP_RELEASE_KEY_PASSWORD=12345678
+
+
+
+MYAPP_RELEASE_STORE_FILE= yuvasoft.keytool
+MYAPP_RELEASE_KEY_ALIAS= yuvasoft
+MYAPP_RELEASE_STORE_PASSWORD= yuvasoft@123
+MYAPP_RELEASE_KEY_PASSWORD= yuvasoft@123
+
+android.enableAapt2=false
 android.useDeprecatedNdk=true
